Fixed minor Firefox layout issues.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -310,7 +310,7 @@ html {
 
 .password {
   font-size: 2em;
-  width: 190px;
+  width: 185px;
 }
 
 .fade {
@@ -434,7 +434,7 @@ html {
   margin: 2px 0px;
   border: 1px solid;
   height: 40px;
-  width: 225px;
+  width: 220px;
   
   border-radius: 3px;
   -moz-border-radius: 3px;
